--- a/.github/workflows/www-to-ft.yml
+++ b/.github/workflows/www-to-ft.yml
@@ -18,4 +18,4 @@ jobs:
         uses: actions/checkout@v2
       - run: sh -c "$(curl -fsSL https://fastn.com/install.sh)"
       - name: Upload to FifthTry using fastn
-        run: fastn upload calender-widget
+        run: fastn upload calendar-widget
