adding all code to use the datetime package

--- a/.fastn/config.json
+++ b/.fastn/config.json
@@ -1,5 +1,5 @@
 {
-  "package": "calender.fifthtry.site",
+  "package": "calendar-widget.fifthtry.site",
   "all_packages": {
     "app-switcher.fifthtry.site": {
       "files": {},
