Restructure project into calendar-widget.fifthtry.site directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-.packages/
-.fastn/
+calendar-widget-example.fifthtry.site/.fastn
+calendar-widget-example.fifthtry.site/.packages
+calendar-widget.fifthtry.site/.fastn
+calendar-widget.fifthtry.site/.packages
