--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ calendar-widget-example.fifthtry.site/.fastn
 calendar-widget-example.fifthtry.site/.packages
 calendar-widget.fifthtry.site/.fastn
 calendar-widget.fifthtry.site/.packages
+.DS_Store
