--- a/.github/workflows/www-to-ft.yml
+++ b/.github/workflows/www-to-ft.yml
@@ -14,8 +14,6 @@ jobs:
     env:
       FIFTHTRY_SITE_WRITE_TOKEN: ${{ secrets.FT_CALENDER_WIDGET_WWW }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - run: sh -c "$(curl -fsSL https://fastn.com/install.sh)"
-      - name: Upload to FifthTry using fastn
-        run: cd calendar-widget.fifthtry.site & fastn upload calendar-widget
+      - run: cd calendar-widget.fifthtry.site & fastn upload calendar-widget
